crates/smart-config/tests/ui/derives/tag_on_struct.rs
use smart_config::DescribeConfig;

#[derive(DescribeConfig)]
#[config(tag = "kind")]
struct TestConfig {
    field: u64,
}

fn main() {}
